--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	</div>
 </div>
 </body>
-<script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script type="text/javascript" src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script type="text/javascript" src="jquery.mediaDevice.js"></script>
 <script type="text/javascript">
 	$(function(){
