--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>视频设备调用及影音录制</title>
 	<meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-	<link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/4.5.3/css/bootstrap.min.css" rel="stylesheet">
+	<link href="https://lf6-cdn-tos.bytecdntp.com/cdn/expire-1-M/bootstrap/4.5.3/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="p-3">
 <div class="container-fluid">
@@ -26,35 +26,46 @@
 		<div class="col-12 mx-auto text-center">
 			<label class="d-block">
 				<span>音频输入：</span>
-				<select id="audio_list">
+				<select id="list_audio">
 					<option value="">禁用声音</option>
 				</select>
 				<br />
 				<span>视频输入：</span>
-				<select id="camera_list">
+				<select id="list_camera">
 					<option value="user">默认摄像头</option>
 				</select>
 			</label>
 			<button id="btn_switch">开启</button>
 			<button id="btn_snap">截图</button>
-			<button id="btn_record">录制</button>
+			<button id="btn_record_video">录像</button>
+			<button id="btn_record_audio">录音</button>
 		</div>
 		<div class="col-12 mx-auto text-center mt-5 d-none">
 			<fieldset id="snap_field" class="border text-left">
 				<legend class="d-inline border text-left ml-3 w-auto px-3">截图</legend>
+				<div id="image_list"></div>
 			</fieldset>
+			<a id="post_image" href="javascript:void(0);" class='btn btn-primary'>获取截图</a>
 		</div>
 		<div class="col-12 mx-auto text-center mt-5 d-none">
-			<fieldset id="capture_field" class="border text-left mb-3">
+			<fieldset id="capture_field_video" class="border text-left mb-3">
 				<legend class="d-inline border text-left ml-3 w-auto px-3">录像</legend>
 				<div id="video_list"></div>
 			</fieldset>
 			<a id="post_video" href="javascript:void(0);" class='btn btn-primary'>获取视频</a>
 		</div>
+		<div class="col-12 mx-auto text-center mt-5 d-none">
+			<fieldset id="capture_field_audio" class="border text-left mb-3">
+				<legend class="d-inline border text-left ml-3 w-auto px-3">录音</legend>
+				<div id="audio_list"></div>
+			</fieldset>
+			<a id="post_audio" href="javascript:void(0);" class='btn btn-primary'>获取音频</a>
+		</div>
 	</div>
 </div>
 </body>
-<script type="text/javascript" src="https://cdn.bootcdn.net/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script type="text/javascript" src="https://lf3-cdn-tos.bytecdntp.com/cdn/expire-1-M/jquery/3.5.1/jquery.min.js"></script>
+<script type="text/javascript" src="https://lf3-cdn-tos.bytecdntp.com/cdn/expire-1-M/lamejs/1.2.1/lame.min.js"></script>
 <script type="text/javascript" src="jquery.mediaDevice.js"></script>
 <script type="text/javascript">
 	$(function(){
@@ -81,8 +92,8 @@
 					let opt = document.createElement("option");
 					opt.value = device.deviceId || device.id || device.groupId;
 					opt.appendChild(document.createTextNode(device.label || ('Video - '+opt.value.substr(0,10))));
-					document.querySelector('#camera_list').appendChild(opt);
-					$('#camera_list').prop('selectedIndex', 1);
+					document.querySelector('#list_camera').appendChild(opt);
+					$('#list_camera').prop('selectedIndex', 1);
 				}
 			}
 			if(typeof device_list['audioinput'] !== 'undefined') {
@@ -91,8 +102,8 @@
 					let opt = document.createElement("option");
 					opt.value = device.deviceId || device.id || device.groupId;
 					opt.appendChild(document.createTextNode(device.label || ('Audio - '+opt.value.substr(0,10))));
-					document.querySelector('#audio_list').appendChild(opt);
-					$('#audio_list').prop('selectedIndex', 1);
+					document.querySelector('#list_audio').appendChild(opt);
+					$('#list_audio').prop('selectedIndex', 1);
 				}
 			}
 			$('#btn_switch').click();
@@ -100,16 +111,16 @@
 		$('#btn_switch').click(function(){
 			if(video_obj.data('stream')==null) {
 				let opt = video_obj.camera('setting');
-				let device_audio = $('#audio_list').val();
-				let device_video = $('#camera_list').val();
-				if($('#audio_list').prop('selectedIndex')===0) {
+				let device_audio = $('#list_audio').val();
+				let device_video = $('#list_camera').val();
+				if($('#list_audio').prop('selectedIndex')===0) {
 					opt.audio = false;
 				} else {
 					if(device_audio!=='default') {
 						opt.audio.deviceId = device_audio;
 					}
 				}
-				if($('#camera_list').prop('selectedIndex')>0) {
+				if($('#list_camera').prop('selectedIndex')>0) {
 					delete opt.video.facingMode;
 					opt.video.deviceId = device_video;
 				} else {
@@ -125,11 +136,41 @@
 		});
 		$('#btn_snap').click(function(){
 			video_obj.camera('snap', function(data){
-				$('<img>').attr('src', data).attr('width', 300).addClass('m-2').appendTo('#snap_field');
+				let container = $('<div>').css({'position':'relative','float':'left'}).appendTo('#image_list');
+				let imageTag = document.createElement('img');
+				let file = dataURItoBlob(data);
+				$(imageTag).attr({
+								width:300,
+								src:data
+							})
+						.addClass('m-2 border rounded')
+						.css('opacity',0.3)
+						.hover(
+								function(){$(this).css('opacity', 1)},
+								function(){$(this).css('opacity', 0.4)}
+						)
+						.appendTo(container);
+				let closeTag = $('<button type="button" class="btn btn-secondary close">&times;</button>');
+				closeTag.css({
+					position: 'absolute',
+					top: 10,
+					right: 10,
+					width: 28,
+					height:28,
+					padding: 0
+				}).appendTo(container)
+						.data('file', file)
+						.click(function(){
+							$(this).parentsUntil('#image_list').remove();
+							if($('#image_list > div').length===0) {
+								$('#snap_field').parent().addClass('d-none');
+							}
+						});
 				$('#snap_field').parent().removeClass('d-none');
 			});
 		});
-		$('#btn_record').click(function(){
+		$('#btn_record_video').click(function(){
+			$('#audio').data('audio').pause();
 			let result = video_obj.camera('record', function (e) {
 				let chunks = e.data;
 				if(chunks.size<500) return;
@@ -163,26 +204,68 @@
 					.click(function(){
 						$(this).parentsUntil('#video_list').remove();
 						if($('#video_list > div').length===0) {
-							$('#capture_field').parent().addClass('d-none');
+							$('#capture_field_video').parent().addClass('d-none');
 						}
 					});
-				$('#capture_field').parent().removeClass('d-none');
+				$('#capture_field_video').parent().removeClass('d-none');
 				video_obj.data('recorder', null);
 			});
 			$(document).one('fullscreenchange', function(){
-				$('#btn_record').text('录制');
+				$('#btn_record_video').text('录像');
 			})
 			if(result) {
 				$(this).text('停止');
 			} else {
-				$(this).text('录制');
+				$(this).text('录像');
 			}
 		});
-		$('#audio_list').change(function(){
+		$('#btn_record_audio').click(function(){
+			$('#audio').data('audio').pause();
+			let result = $('#audio').audio('record', function(blob){
+				const file = new File([blob], "record_"+Math.round(new Date().getTime()/1000) +".mp3", {type: 'audio/mp3'});
+				let audioTag = document.createElement('audio');
+				audioTag.controls = true;
+				audioTag.muted = false;
+				audioTag.src = window.URL.createObjectURL(blob);
+				$(audioTag).attr({width:'100%',height:30})
+						.addClass('mx-3')
+						.css('opacity',0.3)
+						.hover(
+								function(){$(this).css('opacity', 1)},
+								function(){$(this).css('opacity', 0.4)}
+						);
+				let container = $('<div>').css({'position':'relative','float':'left'}).append($(audioTag)).appendTo('#audio_list');
+				$('#capture_field_audio').parent().removeClass('d-none');
+
+				let closeTag = $('<button type="button" class="btn btn-secondary close">X</button>');
+				closeTag.css({
+					position: 'absolute',
+					'font-size': '10px',
+					top: 0,
+					right: 0,
+					width: 16,
+					height:16,
+					padding: 0
+				}).appendTo(container)
+						.data('file', file)
+						.click(function(){
+							$(this).parentsUntil('#audio_list').remove();
+							if($('#audio_list > div').length===0) {
+								$('#capture_field_audio').parent().addClass('d-none');
+							}
+						});
+			}, 'mp3');
+			if(result) {
+				$(this).text('停止');
+			} else {
+				$(this).text('录音');
+			}
+		});
+		$('#list_audio').change(function(){
 			video_obj.camera('close');
 			$('#btn_switch').trigger('click');
 		});
-		$('#camera_list').change(function(){
+		$('#list_camera').change(function(){
 			video_obj.camera('close');
 			$('#btn_switch').trigger('click');
 		});
@@ -204,6 +287,42 @@
 		let videos = getVideos();
 		console.log(videos);
 		alert('已获取 '+videos.length+' 个视频，请在控制台查看！');
+	});
+	function getAudios() {
+		let files = [];
+		let size = 0;
+		$('#audio_list .close').each(function(){
+			if($(this).data('file').size<size) {
+				files.push($(this).data('file'));
+			} else {
+				files.unshift($(this).data('file'));
+			}
+			size = $(this).data('file').size;
+		})
+		return files;
+	}
+	$('#post_audio').click(function(){
+		let audios = getAudios();
+		console.log(audios);
+		alert('已获取 '+audios.length+' 个音频，请在控制台查看！');
+	});
+	function getImages() {
+		let files = [];
+		let size = 0;
+		$('#image_list .close').each(function(){
+			if($(this).data('file').size<size) {
+				files.push($(this).data('file'));
+			} else {
+				files.unshift($(this).data('file'));
+			}
+			size = $(this).data('file').size;
+		})
+		return files;
+	}
+	$('#post_image').click(function(){
+		let images = getImages();
+		console.log(images);
+		alert('已获取 '+images.length+' 个视频截图，请在控制台查看！');
 	});
 </script>
 </html>
